# ergo

./: CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/: settings.yml
.github/workflows/: audit.yml  ci.yml  committed.yml  rust-next.yml
crates/ergo/: CHANGELOG.md  Cargo.toml  README.md
crates/ergo-core/: CHANGELOG.md  Cargo.toml  README.md
crates/ergo-core/src/string/: mod.rs
crates/ergo/src/: lib.rs
crates/eztd/: CHANGELOG.md  Cargo.toml  README.md
crates/eztd-core/: CHANGELOG.md  Cargo.toml  README.md
crates/eztd-core/src/: lib.rs
crates/eztd-core/src/string/: bytes.rs  inline.rs  mod.rs  shared.rs
crates/eztd/src/: lib.rs
