[package]
name = "ergo"
version = "0.0.3"
description = "Quick start Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ergo-rs/ergo"
readme = "README.md"
categories = ["data-structures"]
keywords = ["development", "prototype"]
edition = "2018"

[dependencies]
ergo-core = { version = "^0.0.3", path = "../ergo-core" }
